add images to readme

--- a/src/main/resources/static/html/taskList.html
+++ b/src/main/resources/static/html/taskList.html
@@ -45,7 +45,7 @@
 <!-- Esto va a aparecer al clickear en modificar -->
 <div class="row">
   <div class="col-sm-6" style="display: none;
-											background-color:#e6fffa; padding:10px; border-radius:3px"
+											background-color:rgb(200, 194, 196); padding:10px; border-radius:3px"
        id="div_task_updating">
     <form id="update_task_form">
       <div class="form-group">
